add logging for maven script