@@ -57,7 +57,12 @@ public class SafeExecuteTestServiceImpl implements SafeExecuteTestService {
 
             // Execute bash script
             String[] command = {"bash", bashScriptFile.getAbsolutePath(), "-p", path.toAbsolutePath().toString(), "-x", pomTemplateFile.getAbsolutePath()};
-            p = Runtime.getRuntime().exec(command);
+            log.info(Arrays.toString(command));
+            ProcessBuilder processBuilder = new ProcessBuilder(command);
+            processBuilder.redirectErrorStream(true);
+            File logfile = new File("error-log.txt");
+            processBuilder.redirectOutput(logfile);
+            p = processBuilder.start();
             p.waitFor();
 
             if (p.exitValue() != 0) {
